# http-router

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  conanfile.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cmake/: http-router-warnings.cmake  prepare_pack.cmake
examples/: CMakeLists.txt  simple-server.cc
extras/: CMakeLists.txt
extras/cors/: CMakeLists.txt
extras/cors/include/http-router/filters/: cors.hh
extras/cors/src/: cors.cc
extras/headers/: CMakeLists.txt
extras/headers/include/http-router/filters/: headers.hh
extras/headers/src/: headers.cc
extras/logger/: CMakeLists.txt
extras/logger/include/http-router/filters/: logger.hh
extras/static_files/: CMakeLists.txt  static_files_types.cc  static_files_types.hh
extras/static_files/include/http-router/filters/static_files/: root_directories.hh  root_directory.hh
extras/static_files/src/: static_files.cc
include/http-router/: path_compiler.hh  route.hh  server.hh  shared_roots.hh
include/http-router/beast/patched/: basic_file_body.hh  file_body.hh  file_body_win32.hh
include/http-router/filters/: base.hh
libs/: CMakeLists.txt
libs/cors/: CMakeLists.txt
libs/cors/include/http-router/filters/: cors.hh
libs/headers/: CMakeLists.txt
libs/headers/src/: headers.cc
libs/http-router/: CMakeLists.txt
libs/http-router/include/http-router/: delegate.hh  range.hh  request.hh  response.hh  route.hh  router.hh  server.hh  uri.hh
libs/http-router/include/http-router/beast/patched/: file_body_win32.hh
libs/http-router/src/: range.cc  response.cc  router.cc  shared_roots.cc  uri.cc  version.hh.in
libs/http-router/src/server/: beast.cc  beast.hh  server.cc
libs/logger/: CMakeLists.txt
libs/logger/src/: logger.cc
libs/static_files/: CMakeLists.txt
libs/static_files/include/http-router/filters/: static_files.hh
libs/static_files/src/: static_files.cc  static_files_types.hh  static_files_types.inl
src/: CMakeLists.txt  path_compiler.cc  range.cc  response.cc  router.cc  version.cc
src/server/: beast.hh  http_session.cc  http_session.hh
tools/: make-types.py
